--- a/web/styles/main.less
+++ b/web/styles/main.less
@@ -1,8 +1,9 @@
 // Styles reset - Normalize.css
 @import 'normalize.less';
 
-// UIKit customizations
+// Styling variables, includes colour codes
 @import 'variables.less';
 
 // Style modules
 @import 'layout.less';
+@import 'typography.less';
